<resources>
    <string name="app_name">Кредит на карту</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="description">Инструкция</string>
    <string name="makeRequest">Оформить заявку</string>
    <string name="aboutApp">О программе</string>
    <string name="thanks">Спасибо за заявку!</string>
    <string name="more">Подробнее</string>
    <string name="privacyPolicy">Политика конфиденциальности</string>

    <string name="metrika">900b9bd1-5127-40c0-9d34-d13ff31e6e1e</string>

    <string name="name">Имя</string>
    <string name="sname">Отчество</string>
    <string name="surname">Фамилия</string>
    <string name="phone">Моб. телефон</string>
    <string name="date">Дата рождения</string>
    <string name="mail">Электронная почта</string>
    <string name="requestcard">ЗАКАЗАТЬ КАРТУ</string>

    <string name="title1">Здравствуйте!</string>
    <string name="text1">Благодарим за установку нашего приложения. Сейчас мы расскажем Вам как легко и быстро получить кредитную карту с бесплатной доставкой не выходя из своего дома!</string>
    <string name="title2">Мы предлагаем Вам:</string>
    <string name="text2">Специально для Вас мы разработали уникальное приложение, которое позволяет оформить и получить кредитную карту указав в заявке только Ваши имя и номер телефона!

    \n\nПосле этого наши операторы сделают все сами. Мы подберем для Вас самое выгодное предложение по процентной ставке, сделаем максимальное колиество безпроцентных дней и предложим лучшие условия пользования кредитной картой.

    \n\nВам нужно всего лишь оформить заявку прямо в нашем приложении!</string>

    <string name="correctData">Обязательно проверьте правильность Ваших данных</string>

    <string name="textAboutTitle">Кредитная карта Online!</string>
    <string name="textAboutText">Версия приложения: 1.0
    \n\nЯзык: Русский
    \n\n<a href="http://kesh.online/policy.html">Политика конфиденциальности</a>
    \n\n
    \n\nВсе права защищены (с)</string>
    <string name="likeApp"><a href="https://play.google.com/store/apps/details?id=com.financeapp.mfo">Оценить приложение в магазине Google Play.</a></string>

    <string name="text3fields">Для оформления заявки заполните всего три поля!

    \n\nПосле оформления с Вами свяжется наш оператор, который подберет для Вас лучшие условия и проконсультирует по всем возникшим вопросам.</string>
    <string name="online">online</string>

    <string name="thanksText">Пожалуйста,включите Ваш мобильный телефон и лжидайте звонка о оператораю Звонок должен поступить в самое ближайшее время!

    \n\nМы будем очень рады, если Вы оцените наше приложение и поставите положительную оцентку!</string>

    <string name="thanks3">Благодарим за использование нашего приложения!</string>
    <string name="gotocheck">ПЕРЕЙТИ К ОФОРМЛЕНИЮ</string>
    <string name="iagree">Я согласен(сна) на обработку моих персональных данных</string>
</resources>
