<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_desc"
            android:icon="@drawable/description"
            android:title="@string/description" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/makerequest"
            android:title="@string/makeRequest"/>
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/androidlogo"
                android:title="@string/aboutApp" />
            <!--<item-->
                <!--android:id="@+id/nav_confidential"-->
                <!--android:icon="@drawable/keyhole"-->
                <!--android:title="@string/privacyPolicy" />-->
        </menu>
    </item>

</menu>
