<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="test.db.sql.financecredits.DescriptionActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorTextBlack"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/textTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorTextBlack"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/buttonRequest"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickRequest"
        android:text="@string/requestcard"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorTextWhite"/>
</LinearLayout>