<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="test.db.sql.financecredits.RequestActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <TextView
        android:id="@+id/text3fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text3fields"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/surname"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textViewCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correctData"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/iagree" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="36dp"
            android:layout_height="37dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonRequest"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickRequest"
        android:text="@string/requestcard"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorTextWhite"/>
    </LinearLayout>
</ScrollView>